# proof-carrying-multi-agents

./: .env.example  .gitignore  HOWTO.md  Makefile  README.md  README_REBUTTAL_RUNS.md  READMEv1.md  gitignore  phase_j_smoke_manifest_HOWTO.md  pyproject.toml  requirements.txt  requirements_freeze.txt  requirements_mac_freeze.txt
.github/workflows/: ci.yml  deploy_space.yml
app/: .dockerignore  Dockerfile  README.md  app.py  requirements.txt  server.py
app/components/: __init__.py  agent_trace.py  byok_modal.py  certificate_card.py  llm_client.py  theme.py
app/demo_data/: comparisons.json  examples.json  results_fixtures.json
app/pages/: 1_Live_Run.py  2_Certificate_Inspector.py  3_Side_by_Side.py  4_Results_Browser.py  5_Auditor_Demo.py  __init__.py  _live_run_helpers.py
app/pcg_glue/: attacks.py  audit_envelopes.py  backends.py  channels.py  claim_extractor.py  pipeline.py  pipeline_legacy.py  redundancy.py  responsibility.py  risk_control.py  schemas.py  sources.py
app/static/: app.js  app.js.bak_filefix_1780351254  index.html  index.html.bak_filefix_1780351254  styles.css  styles.css.bak_filefix_1780351254
artifacts/: coverage_plan.json  dataset_schema_tatqa_weblinx.txt
artifacts/v4_preview/: manifest_hash.txt
configs/: frontier_merge.yaml  local_40_cells.yaml  medmcqa.yaml  medqa.yaml  preflight_2_cells.yaml  preflight_40_cells.yaml  r1_fever.yaml  r1_hotpotqa.yaml  r1_pubmedqa.yaml  r1_tatqa.yaml  r1_weblinx.yaml  r2_redundancy.yaml  r3_responsibility.yaml  r4_risk.yaml  r5_overhead.yaml  r6_cross_domain.yaml  smoke.yaml  tmp_baseline_lightweight_citation.yaml  tmp_baseline_multiagent_no_cert.yaml  tmp_baseline_posthoc_verify.yaml  tmp_baseline_selective.yaml  tmp_pcg_full.yaml  v4_matrix.yaml
docs/: manifest.json
figures/: intro_hero_manifest.json  manifest.json  summary_benchmark_manifest.json
latex/: appendix_exp_details.tex  experiments.tex
notebooks/: pcg_v4_colab_16cells.ipynb  run_large_llms.ipynb
scripts/: _common.py  aggregate_overhead.py  build_backends_manifest.py  build_final_readme.py  build_paper_artifacts.py  build_readme.py  build_readme_report.py  deploy_to_anonymous_space.sh  make_figures.py  make_intro_hero.py  make_paper_artifacts.py  make_per_experiment_plots.py  make_summary_benchmark.py  make_tables.py  pick_top_k.py  r1_audit_envelope.py  run_eval.py  run_healthcare.py  run_local_llms.sh  run_overhead.py  run_r1_checkability.py  run_r2_redundancy.py  run_r3_responsibility.py  run_r4_risk_privacy.py  run_r5_overhead.py  summarize_runs.py  test_phase_bc.py  test_phase_d.py  v4_build_intro_metrics.py  v4_build_paper_artifacts.py  v4_collect_artifacts.py  v4_make_colab_notebook.py  v4_make_latex_tables.py  v4_make_proxy_metrics.py  v4_make_r1_r5_figures.py  v4_make_summary_figure.py  v4_plan_matrix.py  v4_reconcile_remote_results.py  v4_run_matrix_local.py  v4_run_matrix_remote.py
src/common/: env.py  (+4 more)
tests/: test_audit_envelope_v4.py  test_checker_v4_channels.py
(+340 files in other folders)
