[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pcg-mas"
version = "0.1.0"
description = "Proof-Carrying Generation for Multi-Agent Systems (NeurIPS 2026 submission artifact)"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [{ name = "Anonymous" }]
keywords = ["llm", "multi-agent", "verification", "proof-carrying", "grounding"]

# Intentionally pinned at sensible bands that work on Apple Silicon (MPS) and CUDA.
dependencies = [
    # --- core numerics ---
    "numpy>=1.26,<2.2",
    "scipy>=1.11",
    "pandas>=2.1",
    "pyarrow>=15.0",
    # --- ML / torch ---
    "torch>=2.4",                   # 2.4+ has solid MPS support on Apple Silicon
    "transformers>=4.44",
    "accelerate>=0.33",
    "sentence-transformers>=3.0",
    "datasets>=2.20",
    "tokenizers>=0.19",
    "safetensors>=0.4",
    # --- retrieval ---
    "rank-bm25>=0.2.2",
    "faiss-cpu>=1.8",               # GPU not needed for R1-R5 index sizes
    # --- agent orchestration ---
    "langgraph>=0.2",
    "langchain-core>=0.3",
    # --- schemas, validation, typing ---
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "jsonschema>=4.22",
    # --- calibration + stats ---
    "scikit-learn>=1.4",
    "statsmodels>=0.14",
    # --- differential privacy ---
    "opacus>=1.5",                  # only needed if we finetune; for additive noise we roll our own
    # --- plotting ---
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "colorcet>=3.1",
    # --- config, logging, CLI ---
    "typer>=0.12",
    "rich>=13.7",
    "pyyaml>=6.0",
    "omegaconf>=2.3",
    "tqdm>=4.66",
    "loguru>=0.7",
    # --- crypto, hashing ---
    "cryptography>=43.0",
    "xxhash>=3.4",
    # --- misc ---
    "tiktoken>=0.7",                # fast token counting for overhead meter
]

[project.optional-dependencies]
# Install with: pip install -e ".[dev]"
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.6",
    "hypothesis>=6.112",
    "ruff>=0.6",
    "mypy>=1.11",
    "ipykernel>=6.29",
    "jupyterlab>=4.2",
]
# Frontier API adapters (optional, only if user supplies keys)
frontier = [
    "openai>=1.40",
    "anthropic>=0.34",
]
# Web-search stress tests (optional)
web = [
    "duckduckgo-search>=6.2",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
]

[project.scripts]
pcg = "pcg.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/pcg"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP", "S", "A", "C4", "PT", "RUF"]
ignore = ["S101"]  # allow asserts in tests

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"
